--- a/package.json
+++ b/package.json
@@ -10,14 +10,28 @@
   },
   "dependencies": {
     "@next/font": "13.1.4",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "clipboard-copy": "^4.0.1",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
+    "google-map-react": "^2.2.0",
+    "material-ui-popup-state": "^5.0.4",
     "next": "13.1.4",
+    "next-seo": "^5.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "flowbite": "^1.6.3",
+    "flowbite-react": "^0.3.7",
+    "postcss": "^8.4.21",
+    "sass": "^1.57.1",
+    "tailwindcss": "^3.2.4"
   }
 }
