--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "13.1.4",
     "@tailwindcss/typography": "^0.5.9",
+    "@types/lodash": "^4.14.191",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
@@ -18,6 +19,7 @@
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
     "google-map-react": "^2.2.0",
+    "lodash": "^4.17.21",
     "material-ui-popup-state": "^5.0.4",
     "next": "13.1.4",
     "next-seo": "^5.15.0",
