--- a/package.json
+++ b/package.json
@@ -16,23 +16,24 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "clipboard-copy": "^4.0.1",
+    "contentlayer": "^0.3.0",
+    "dayjs": "^1.11.7",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
-    "google-map-react": "^2.2.0",
     "lodash": "^4.17.21",
     "next": "13.1.4",
+    "next-contentlayer": "^0.3.0",
     "next-seo": "^5.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-paginate": "^8.1.4",
     "typescript": "4.9.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.7",
-    "postcss": "^8.4.21",
-    "sass": "^1.57.1",
     "tailwindcss": "^3.2.4"
   }
 }
