--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@tailwindcss/typography": "^0.5.9",
     "@types/lodash": "^4.14.191",
     "@types/node": "18.11.18",
