--- a/package.json
+++ b/package.json
@@ -9,32 +9,41 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "14.0.4",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@tailwindcss/typography": "^0.5.10",
-    "@types/lodash": "^4.14.202",
-    "@types/node": "20.10.5",
-    "@types/react": "18.2.45",
-    "@types/react-dom": "18.2.18",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-navigation-menu": "^1.2.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@tailwindcss/typography": "^0.5.15",
+    "@types/lodash": "^4.17.13",
+    "@types/node": "22.9.0",
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1",
+    "@vercel/toolbar": "^0.1.26",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "contentlayer": "^0.3.4",
-    "dayjs": "^1.11.10",
-    "eslint": "8.56.0",
-    "eslint-config-next": "14.0.4",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
+    "eslint": "9.14.0",
+    "eslint-config-next": "15.0.3",
     "fuse.js": "^7.0.0",
     "lodash": "^4.17.21",
-    "next": "14.0.4",
+    "lucide-react": "^0.456.0",
+    "next": "15.0.3",
     "next-contentlayer": "^0.3.4",
-    "next-seo": "^6.4.0",
-    "next-themes": "^0.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.12.0",
-    "typescript": "5.3.3"
+    "next-seo": "^6.6.0",
+    "next-themes": "^0.4.3",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-icons": "^5.3.0",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "5.6.3"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.16",
-    "flowbite": "^2.2.1",
-    "flowbite-react": "^0.7.2",
-    "tailwindcss": "^3.4.0"
+    "autoprefixer": "^10.4.20",
+    "flowbite": "^2.5.2",
+    "flowbite-react": "^0.10.2",
+    "tailwindcss": "^3.4.14"
   }
 }
