--- a/package.json
+++ b/package.json
@@ -9,37 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-navigation-menu": "^1.2.1",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@tailwindcss/typography": "^0.5.15",
-    "@types/lodash": "^4.17.13",
-    "@types/node": "22.9.0",
-    "@types/react": "18.3.12",
-    "@types/react-dom": "18.3.1",
-    "@vercel/toolbar": "^0.1.26",
-    "class-variance-authority": "^0.7.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/lodash": "^4.17.20",
+    "@types/node": "24.3.0",
+    "@types/react": "19.1.10",
+    "@types/react-dom": "19.1.7",
+    "@vercel/flags": "^3.1.1",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "contentlayer": "^0.3.4",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
-    "eslint": "9.14.0",
-    "eslint-config-next": "15.0.3",
-    "fuse.js": "^7.0.0",
-    "lucide-react": "^0.456.0",
-    "next": "15.0.3",
+    "eslint": "9.33.0",
+    "eslint-config-next": "15.5.0",
+    "fuse.js": "^7.1.0",
+    "lucide-react": "^0.540.0",
+    "next": "15.5.0",
     "next-contentlayer": "^0.3.4",
-    "next-themes": "^0.4.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "tailwind-merge": "^2.5.4",
+    "next-themes": "^0.4.6",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.6.3"
+    "typescript": "5.9.2"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "flowbite-react": "^0.10.2",
-    "tailwindcss": "^3.4.14"
+    "autoprefixer": "^10.4.21",
+    "flowbite-react": "^0.12.7",
+    "tailwindcss": "^4.1.12"
   }
 }
